src/styles.css
/* ... */
.radio-warning input[type="radio"] + label::after {
  background-color: #f0ad4e; }
.radio-warning input[type="radio"]:checked + label::before {
  border-color: #f0ad4e; }
.radio-warning input[type="radio"]:checked + label::after {
  background-color: #f0ad4e; }

.radio-success input[type="radio"] + label::after {
  background-color: rgb(107,172,70); }
.radio-success input[type="radio"]:checked + label::before {
  border-color: rgb(107,172,70); }
.radio-success input[type="radio"]:checked + label::after {
  background-color: rgb(107,172,70); }

.dropdown-item.active, .dropdown-item:active{
  background-color:rgb(107,172,70) !important;
}
.dropdown-item.active>a, .dropdown-item:active>a{
  color:white !important;
}
.dropdown-item {
  padding: .25rem 0.5rem;
}

h5{
  font-size: 1.1rem;
}
/*
  Dropdown
*/

.dd-t-custom{
  cursor: pointer;
  color:black;
  background-color: white;
}

.btn, .dropdown-item{
  cursor: pointer;
}

.dd-col{
  /* min-height: 35pt; */
  padding:1px;
}
.dd-left{
  font-weight: bold;
  padding-left:5pt;
  font-size:8pt;
  vertical-align: middle;
}
.dd-right{
  /* line-height:35pt; */
  font-size:16pt;
  vertical-align: middle;
}
.dd-search-text {
  font-size:14pt;
}
.dd-caret{
  font-size:15pt;
  padding-right:8pt;
  text-align: center;
  /* line-height: 35pt; */
  color:rgb(107,172,70);
}
.dd-t-custom::after{
  /* border-top: .5em solid rgb(107,172,70);
    border-right: .4em solid transparent;
    border-bottom: 0;
    border-left: .4em solid transparent;
    margin-left: .155em;
    vertical-align: .055em; */
    display:none;
}

.dd-container{
  height: 100%;
}

.dd-inner>.dd-right{
  font-size: 14pt;
}

.dd-inner>.dd-left{
  padding:0pt;
}

.dropdown-menu{
  width:100%;
  color:black;
}

.dropdown-menu {
  min-width: 0 !important;
}

.dropdown-item.active>a, .dropdown-item:active {
  color: white;
  text-decoration: none;
}

.dropdown-item>a, .dropdown-item>a:hover{
  text-decoration: none;
  color:black !important;
}

.select-box{
  cursor: pointer;
  background-color: white;
  color: rgb(107,172,70);
  border: 2px solid rgb(107,172,70);
  padding: 0pt;
  padding-top: 4pt;
  padding-bottom: 4pt;
  margin-bottom:5pt;
  font-weight: bold;
  border-radius:1rem !important;
}

.dark-card-border{
  border: 1px solid darkgray;
}

.sticky-footer{
  background-color: gray;
  color:white;
  border:1px solid white;
  box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.3);
  text-shadow:2px 2px 3px rgba(0,0,0,0.3);
  width:100%;
  position: fixed;
  bottom: 0;
  padding:10pt;
  text-align: center;
  z-index: 1;
}

.sticky-footer-mobile{
  width: 100%;
  position: fixed;
  bottom: 0;
  z-index: 1;
  padding: 5pt;
  background: rgba(255,255,255,.5);
}

.shadow-btn{
  box-shadow:3px 3px 4px rgba(0,0,0,0.3);
  text-shadow:2px 2px 3px rgba(0,0,0,0.3);
}

#searchButton{
  font-weight: bold;
  max-height: 40pt;
  padding: 8pt;
  font-size: 18pt;
  box-shadow:3px 3px 4px rgba(0,0,0,0.3);
  text-shadow:2px 2px 3px rgba(0,0,0,0.3);
}

#searchButtonMobile{
  font-weight: bold;
  padding: 6pt;
  font-size: 16pt;
  box-shadow:3px 3px 4px rgba(0,0,0,0.3);
  text-shadow:2px 2px 3px rgba(0,0,0,0.3);
}

#contactMeBtn{
  padding-left: 20pt;
  padding-right: 20pt;
  font-weight: normal;
}

.pin-icon{
  max-height: 20px;
  position: relative;
  padding-left: 5px;
  top: -5px;
}

.vehicle-icon{
  max-width: 25pt;
  margin-right: 5pt;
}

.vehicle-icon-sm{
  max-width: 20pt;
  margin-right:2pt;
  padding-left: 2pt;
}

.skew-outer{
  -ms-transform: skewX(-20deg); 
  -webkit-transform: skewX(-20deg); 
  transform: skewX(-20deg);
}
.padder::before{
  content: " ";
  width: 15pt;
  position: absolute;
  left: -9pt;
  top: -3pt;
  background: rgb(217,217,217);
  height: 115%;
  z-index: 100;
}
.padder-after::after{
  content: " ";
  width: 15pt;
  position: absolute;
  right: -9pt;
  top: -3pt;
  background: rgb(217,217,217);
  height: 115%;
  z-index: 100;
}

.shift-up{
  position: relative;
  left: 5pt;
}

.shift-left{
  position: relative; 
  left:-5pt; 
  z-index: 101;
}

.skew-inner{
  -ms-transform: skewX(20deg); 
  -webkit-transform: skewX(20deg); 
  transform: skewX(20deg);
}

.container-increased{
  margin:0 auto;
  width:1025.25px;
}

.search-icon{
  height: 100pt;
}

.results-table{
  font-size:9pt;
  font-weight: 400;
}

.results-col{
  padding-left: 3pt;
  padding-right: 3pt;
}

.result-tyre{
  height: 100px;
}

.result-logo{
  width:60px;
}

a:hover{
  text-decoration: none;
  color:black;
}

.btn-secondary{
  background-color: white;
  color:black;
  border-color: rgba(0,0,0,.125);
}

.btn-secondary:hover{
  background-color: gray;
  border-color: gray;
}

.btn-secondary:not([disabled]):not(.disabled).active, .btn-secondary:not([disabled]):not(.disabled):active, .show>.btn-secondary.dropdown-toggle{
  background-color: gray;
  border-color: gray;
}

.dropdown-toggle::after{
  display:none;
}

.dropdown-item active{
  color:white;
}

.tooltip-inner {
  max-width: 350px !important;
}

.header-section{
  margin:0 auto;
  margin-top:70px;
}
.results-and-filters{
  padding-top: 130px;
}
.header-section-40{
  margin:0 auto;
  margin-top:40px;
  background-color:rgb(220,220,220);
  padding-bottom: 5pt;
  position: fixed;
  width: 100%;
  z-index: 100;
}

.header-section-mobile{
  margin:0 auto;
  background-color:rgb(220,220,220);
  padding: 5pt;
}

.w-5{
  width:5% !important;
}
.w-10{
  width:10% !important;
}
.w-125{
  width:12.5% !important;
}
.w-15{
  width:10% !important;
}
.w-20{
  width:20% !important;
}
.w-33{
  width:33% !important;
}

.modify-btn{
  font-size:9pt !important;
}

.green-border{
  border-right:1pt solid rgb(107,172,70);
}

.mobile-sidenav{
  margin-top:56pt;
  width: 200pt;
}
.mobile-sidenav-top{
  background-color: rgb(242,242,242);
  font-size:10pt;
}

.fixed-mobile-container{
  margin-top: -78pt;
  position: fixed;
  z-index: 100;
  width: 100%;
}

.results-container{
  margin-top: 130pt;
}
/* ... */

